# SpeedPortAPI

./: .dockerignore  .env.template  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd-docker.yaml  ci-tests.yaml
app/: __init__.py
app/core/: settings.py  utils.py
app/devices/: models.py  routers.py
app/health/: models.py  routers.py
app/router/: models.py  routers.py
app/status/: models.py  routers.py
tests/: conftest.py  test_api.py  test_router.py  test_utils.py
tests/tests_api/: test_health.py  test_router.py
